--- a/public/kanbas/index.css
+++ b/public/kanbas/index.css
@@ -16,32 +16,18 @@
 
 .wd-dimension-square {
   width: 80px;
-  height: 70px;
-  display: flex;
-  padding-right: 0px;
-  padding-left: 0px;
-  margin: 0;
+  height: 80px;
   background-color: black;
-  font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
-  justify-content: center;
-  align-items: center;
   color: white;
 }
 
 .wd-dimension-square-active {
   width: 80px;
   height: 70px;
-  display: flex;
-  padding-right: 10px;
-  padding-left: 0px;
-  font-size: 14px;
-  margin: 0;
   background-color: white;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  justify-content: center;
-  align-items: center;
   color: red;
 }
 
@@ -94,4 +80,10 @@
 }
 .wd-fg-color-green {
   color: green;
+}
+
+a:link,
+a:visited {
+  color: red;
+  text-decoration: none;
 }
